# python-stochbb

./: CMakeLists.txt  setup.py
python/: CMakeLists.txt  stochbb.i
