cmake_minimum_required(VERSION 2.8)
PROJECT(python-stochbb)

option(PYTHON_INSTALL_LOCAL "Install python binding to user local" ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)
include(InstallHeadersWithDirectory)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT})
set(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT})
set(CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS_INIT})

find_package(StochBB REQUIRED)
find_package(Eigen3 REQUIRED)
FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE(${SWIG_USE_FILE})
# If siwg and python found -> build python interface
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${StochBB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Set RPATH under MacOS
SET(CMAKE_SKIP_RPATH FALSE)
SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR})

SET(libsbb_VERSION_MAJOR "1")
SET(libsbb_VERSION_MINOR "0")
SET(libsbb_VERSION_PATCH "0")

add_subdirectory(python)


SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "python-stochbb")
SET(CPACK_PACKAGE_VENDOR "stochbb.github.io")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR ${libsbb_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${libsbb_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${libsbb_VERSION_PATCH})
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME
    "python-stochbb-${libsbb_VERSION_MAJOR}.${libsbb_VERSION_MINOR}.${libsbb_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES
    "/build/;/doc/;/dist/;/lib/;/.git/;CMakeLists.txt.user;${CPACK_SOURCE_IGNORE_FILES}")
include(CPack)

